@@ -4,6 +4,10 @@
 	and stderr and replaced with tk_messageBox or log::log. 
 	log::log debug is the way to record debugging messages.
 
+	* tkchat.tcl: Added support for connecting to jabber through http
+	proxies using tls. 
+	Also update the login dialog a bit. Better themeing support.
+
 2004-10-17  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* tkchat.tcl: Added command-line option for setting the jabber
